[project]
name = "mpmt-mss"
version = "0.1.0"
description = "mPMT Slow Control JSON-RPC service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.137.1",
    "pydantic>=2.13.4",
    "pymodbus==3.9.2",
    "pyserial>=3.5",
    "uvicorn>=0.49.0",
]

[project.scripts]
mpmt-mss = "mpmt_mss.main:start"      # uv run mpmt-mss

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mpmt_mss"]

